# LibreESP

./: .clang-format  .gitignore  CMakeLists.txt  DevelopmentSettings.cmake.sample
LibreESP-Core/: CMakeLists.txt
LibreESP-Core/src/: chrono.cpp  chrono.h
cmake/: CheckCrossCompilerVariable.cmake  Toolchain.cmake
docs/: CONTRIBUTING  README.md
